[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Per Lindgren <per.lindgren@ltu.se"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Cortex-M processors"
documentation = "https://docs.rs/cortex-m"
keywords = ["arm", "cortex-m", "register", "peripheral"]
license = "MIT OR Apache-2.0"
name = "cortex-m"
readme = "README.md"
repository = "https://github.com/japaric/cortex-m"
#edition = "2018"
version = "0.6.0"

[patch.crates-io]
volatile-register = { path = "../volatile-register" }

[dependencies.volatile-register]
version = "0.3.0"
features = ["debug-fmt"]

[dependencies]
aligned = "0.2.0"
bare-metal = "0.2.0"
array-debug = { git = "https://gitlab.henriktjader.com/pln/array-debug", optional = true  }

[dependencies.klee]
path = ".."

[features]
cm7-r0p1 = []
const-fn = ["bare-metal/const-fn"]
inline-asm = []
klee-analysis = []
klee-debug = ["array-debug"]


#default = ["klee-debug", "klee-analysis"]
#default = ["klee-debug"]
