[package]
# All alternations to original code.
authors = [ "Per Lindgren <per.lindgren@ltu.se>" ]

categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to Cortex-M processors with support for symbolic exectution and replay"
keywords = ["arm", "cortex-m", "register", "peripheral", "trust"]
name = "cortex-m"
readme = "README.md"
version = "0.6.1"
edition = "2018"
links = "cortex-m"  # prevent multiple versions of this crate to be linked together

[dependencies]
aligned = "0.3.4"
bare-metal = { version = "0.2.0", features = ["const-fn"] }
volatile-register = "0.2.0"
klee-sys = { version = "0.2.0", git ="https://gitlab.henriktjader.com/pln/klee-sys.git" }

[features]
const-fn = []
cm7-r0p1 = []
inline-asm = []
klee-analysis = ["klee-sys/klee-analysis"]
klee-replay = ["klee-sys/klee-replay"]